tests/errors/test_66.x
// No such variable in module

import "standard.x" as std;

fn main() -> void {
    let a = std::val;

    std::hello_world = "what!";

	let v = std::A.HELLO;

}